2009-03-20  Jonathan Pryor  <jpryor@novell.com>

	* mkeithers: Generate <exception/> XML comments.
	* doc/en/Mono.Rocks/Either*.xml: Flush <exception/> comments.

2009-03-14  Jonathan Pryor  <jpryor@novell.com>

	* doc/**: Flush (add <exception/> specifications, as generated by
	  `make doc-update MDOC_OPTIONS=--exceptions=asm'.

2009-03-14  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Allow $NUNIT_OPTIONS to be passed to nunit-console2 in the
	  check and check-all targets.
	* doc/Makefile.include: Use mdoc, not monodocer; Allow MDOC_OPTIONS to 
	  be specified to mdoc-update.
	* doc/**: Flush (Tree-related extension methods).
	* Tests/Mono.Rocks.Tests.csproj: Flush (specify target framework).

2009-01-09  Jonathan Pryor  <jpryor@novell.com>

	* MIT.X11: Added; the library license.  This really should have been
	  added ages ago...

2008-12-26  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush; changes due to mdoc changes (e.g. removal of
	  Extension and other compiler-generated attributes), class library 
	  changes (mkdelegates changes, etc.).

2008-12-26  Jonathan Pryor  <jpryor@novell.com>

	* mkdelegates: Alter .Timings():
	  - Remove "all defaults" .Timings() overload, as it has no utility --
	    it would "automagically" determine the "appropriate" runs &
	    loopsPerRun values, but wouldn't communicate these to the caller,
	    and loopsPerRun is crucial to understanding the timings.
	  - Ensure that Stopwatch is pre-JITed as well as `self'.
	  - Generate documentation.
	* Generator.pm: Add GetValueList() static method.

2008-12-09  Jonathan Pryor  <jpryor@novell.com>

	* Makefile (check): Recent versions of nunit-console2 require -exclude
	  instead of /exclude.

2008-12-09  Jonathan Pryor  <jpryor@novell.com>

	* Generator.pm (ValueList): Return a value when $max==0.

2008-12-08  Jonathan Pryor  <jpryor@novell.com>

	* mkdelegates: Add .Timings() extension method to get a list of how
	  long it takes a delegate to execute.
